ch5/dynamic-storage/taskdb3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 
  labels:
    app: taskdb
  name: taskdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskdb
  strategy: {}
  template:
    metadata:
      
      labels:
        app: taskdb
    spec:
      volumes:
      - name: dbfiles
        persistentVolumeClaim:
          claimName: db
      containers:
      - env:
        - name: MYSQL_USER
          value: taskuser
        - name: MYSQL_PASSWORD
          value: taskpass
        - name: MYSQL_DATABASE
          value: TASKDB
        - name: MYSQL_ROOT_PASSWORD
          value: abrakadabra
        image: registry.redhat.io/rhel8/mariadb-105
        name: mariadb-105
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: dbfiles
        resources: {}
