ch5/dynamic-storage/svc-taskdb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taskdb
  name: taskdb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: taskdb
